--- a/psyke-tutorial.tex
+++ b/psyke-tutorial.tex
@@ -462,7 +462,7 @@
         \item[logic theory:] outcome of the extraction process
     \end{description}
 
-    \begin{block}{Unified API for SKI}
+    \begin{block}{Unified API for SKE}
         \begin{itemize}
             \item 1 interface for \kt{Extractor}, several implementations
             %
