fix: typo on slide 32

--- a/psyke-tutorial.tex
+++ b/psyke-tutorial.tex
@@ -443,7 +443,7 @@
     Key components:
     %
     \begin{description}
-        \item[extractor:] any entity capable of extracting symbolic knowledge out of symbolic predictors
+        \item[extractor:] any entity capable of extracting symbolic knowledge out of sub-symbolic predictors
         %
         \begin{itemize}
             \item possibly, in the form of logic \alert{knowledge bases}
