CHIST-ERA ack added
(and slighlty reduced bibliospace)

--- a/psyke-tutorial.tex
+++ b/psyke-tutorial.tex
@@ -732,13 +732,29 @@
 %/////////
 % \begin{frame}[c,noframenumbering]{\refname}
 \begin{frame}[t,allowframebreaks,noframenumbering]{\refname}
-%	\tiny
-    \scriptsize
+	\tiny
+%    \scriptsize
 %	\footnotesize
     \bibliographystyle{apalike-AMS}
     \bibliography{psyke-tutorial}
 \end{frame}
 %/////////
+
+%===============================================================================
+\section*{Acknowledgements}
+%===============================================================================
+
+\begin{frame}{EXPECTATION}
+\includegraphics[width=\linewidth]{./figures/expectation-banner.pdf}
+
+\bigskip
+
+\footnotesize\begin{quote}
+This presentation was partially supported by the CHIST-ERA IV project ``EXPECTATION'' -- CHIST-ERA-19-XAI-005 --, co-funded by EU and the Italian MUR (Ministry for University and Research).
+\end{quote}
+
+\end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
