fix: missing reference fixed

--- a/psyke-tutorial.bib
+++ b/psyke-tutorial.bib
@@ -1,5 +1,23 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
+@article{schmitz1999NN,
+    author    = {Gregor P. J. Schmitz and
+    Chris Aldrich and
+    F. S. Gouws},
+    title     = {{ANN-DT:} an algorithm for extraction of decision trees from artificial
+    neural networks},
+    journal   = {{IEEE} Trans. Neural Networks},
+    volume    = {10},
+    number    = {6},
+    pages     = {1392--1401},
+    year      = {1999},
+    url       = {https://doi.org/10.1109/72.809084},
+    doi       = {10.1109/72.809084},
+    timestamp = {Wed, 14 Nov 2018 10:32:49 +0100},
+    biburl    = {https://dblp.org/rec/journals/tnn/SchmitzAG99.bib},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{LambGGPAV20,
     author    = {Lu{\'{\i}}s C. Lamb and
     Artur S. d'Avila Garcez and
